--- a/html/menuParaGrupos.html
+++ b/html/menuParaGrupos.html
@@ -111,8 +111,8 @@
     <nav>
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-            <a href="/html/index.html">Restaurante</a>
-            <a href="/html/especialidades.html">Especialidades</a>
+            <a href="main.html">Restaurante</a>
+            <a href="especialidades.html">Especialidades</a>
             <a href="politicasDeAcesso.html">Políticas do Site</a>
         </div>
         <div id="main">
