--- a/html/ementa.html
+++ b/html/ementa.html
@@ -26,10 +26,10 @@
         <nav>
             <div id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-                <a href="/main.html">Restaurante</a>
-                <a href="/especialidades.html">Especialidades</a>
-                <a href="/menuParaGrupos.html">Menu para Grupos</a>
-                <a href="/politicasDeAcesso.html">Políticas de Acesso</a>
+                <a href="/html/main.html">Restaurante</a>
+                <a href="/html/especialidades.html">Especialidades</a>
+                <a href="/html/menuParaGrupos.html">Menu para Grupos</a>
+                <a href="/hmtl/politicasDeAcesso.html">Políticas de Acesso</a>
             </div>
             <div id="main">
                 <button class="openbtn" onclick="openNav()">☰ Menu</button>
