--- a/html/main.html
+++ b/html/main.html
@@ -92,7 +92,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
                 <a href="/html/especialidades.html">Especialidades</a>
                 <a href="/html/menuParaGrupos.html">Menu para Grupos</a>
-                <a href="politicasDeAcesso.html">Políticas do Site</a>
+                <a href="/html/politicasDeAcesso.html">Políticas do Site</a>
             </div>
             
             <div id="main">
