--- a/html/menuParaGrupos.html
+++ b/html/menuParaGrupos.html
@@ -111,9 +111,9 @@
     <nav>
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-            <a href="main.html">Restaurante</a>
-            <a href="especialidades.html">Especialidades</a>
-            <a href="politicasDeAcesso.html">Políticas do Site</a>
+            <a href="/hmtl/main.html">Restaurante</a>
+            <a href="/html/especialidades.html">Especialidades</a>
+            <a href="/hmtl/politicasDeAcesso.html">Políticas do Site</a>
         </div>
         <div id="main">
             <button class="openbtn" onclick="openNav()">☰ Menu</button>
