--- a/html/politicasDeAcesso.html
+++ b/html/politicasDeAcesso.html
@@ -26,7 +26,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
             <a href="/html/especialidades.html">Especialidades</a>
             <a href="/html/menuParaGrupos.html">Menu para Grupos</a>
-            <a href="politicasDeAcesso.html">Políticas do Site</a>
+            <a href="/hmtl/politicasDeAcesso.html">Políticas do Site</a>
         </div>
         
         <div id="main">
