--- a/html/reservas.html
+++ b/html/reservas.html
@@ -108,7 +108,7 @@
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
                 <a href="/html/especialidades.html">Especialidades</a>
                 <a href="/html/menuParaGrupos.html">Menu para Grupos</a>
-                <a href="politicasDeAcesso.html">Políticas do Site</a>
+                <a href="/html/politicasDeAcesso.html">Políticas do Site</a>
             </div>
             <div id="main">
                 <!-- Botão para abrir a barra lateral -->
