--- a/html/especialidades.html
+++ b/html/especialidades.html
@@ -26,7 +26,7 @@
         <nav>
             <div id="mySidebar" class="sidebar">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-                <a href="/html/main.html">Restaurante</a>
+                <a href="/html/index.html">Restaurante</a>
                 <a href="/html/menuParaGrupos.html">Menu para Grupos</a>
                 <a href="/hmtl/politicasDeAcesso.html">Políticas de Acesso</a>
             </div>
