--- a/html/fazerPedido.html
+++ b/html/fazerPedido.html
@@ -205,7 +205,7 @@
     <nav>
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-            <a href="/hmtl/main.html">Restaurante</a>
+            <a href="/hmtl/index.html">Restaurante</a>
             <a href="/html/especialidades.html">Especialidades</a>
             <a href="/hmtl/menuParaGrupos.html">Menu para Grupos</a>
             <a href="/html/politicasDeAcesso.html">Políticas de Acesso</a>
