--- a/html/menuParaGrupos.html
+++ b/html/menuParaGrupos.html
@@ -111,7 +111,7 @@
     <nav>
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-            <a href="/hmtl/main.html">Restaurante</a>
+            <a href="/hmtl/index.html">Restaurante</a>
             <a href="/html/especialidades.html">Especialidades</a>
             <a href="/hmtl/politicasDeAcesso.html">Políticas do Site</a>
         </div>
